--- a/asset/css/stats.css
+++ b/asset/css/stats.css
@@ -291,7 +291,8 @@
     }
     .stats-pool-buy{
         font-size: 22px;
-        line-height: 35px;
+        line-height: 25px;
+        margin-bottom:40px;
     }
     h1{
         font-size:22px;
